--- a/test/vertical_layout.css
+++ b/test/vertical_layout.css
@@ -3,7 +3,7 @@ Screen {
     overflow-y: hidden;
 }
 
-TreeApp {
+TreeView{
     height: 100%;
     max-height: 45vh;
 }
@@ -12,7 +12,21 @@ AlternativeHeader{
     text-style: reverse;
 }
 
-TextLog{
+.test{
+    height: 10vh;
+    max-height: 4vh;
+}
+
+SpinnerWidget{
+    /* layer: below; */
+}
+
+.spinner{
+    max-height: 4vh;
+    border: heavy red;
+}
+
+.container{
     /*padding: 4 8;*/
     border: heavy red;
 
